@@ -1,3 +1,6 @@
+- Improvement: Close debit notes academic debt generation rule allow close of interests (#UL-IGOT-1129)
+- Improvement: Add document observations & terms and conditions to be exported in debt report beans
+
 8.0.1 (27-07-2021)
 - Bug Fix: Error on copy of plans, invisible fields not are deleted
 - Bug Fix: Reverted deletion of  PaymentPenaltySettings and PaymentPenaltyEventTarget (#UL-ISEG-1757)
